@@ -12,23 +12,8 @@
     <groupId>apache.jcs.tests</groupId>
     <artifactId>Apache_JCS</artifactId>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <properties>
-        <apache.commons.jcs3.version>3.0</apache.commons.jcs3.version>
+        <apache.commons.jcs3.version>3.1</apache.commons.jcs3.version>
     </properties>
 
     <dependencies>
