@@ -12,23 +12,8 @@
     <groupId>apache.jetty</groupId>
     <artifactId>Apache_Jetty</artifactId>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <properties>
-        <jetty.version>11.0.0</jetty.version>
+        <jetty.version>11.0.14</jetty.version>
     </properties>
 
     <dependencies>
@@ -55,7 +40,7 @@
         <dependency>
             <groupId>org.eclipse.jetty.toolchain</groupId>
             <artifactId>jetty-test-helper</artifactId>
-            <version>5.5</version>
+            <version>6.0</version>
             <!--scope>test</scope -->
         </dependency>
         <dependency>
@@ -78,38 +63,16 @@
             <artifactId>jetty-websocket</artifactId>
             <version>8.2.0.v20160908</version>
         </dependency>
-
-        <!--Jetty dependencies start here -->
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty.websocket/javax-websocket-server-impl -->
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>javax-websocket-server-impl</artifactId>
-            <version>9.4.43.v20210629</version>
+            <version>9.4.51.v20230217</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-server</artifactId>
-            <version>9.4.43.v20210629</version>
+            <version>9.4.51.v20230217</version>
         </dependency>
-        <!--dependencydependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>javax-websocket-client-impl</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-client</artifactId>
-            <version>${jetty.version}</version>
-        </dependency-->
+
     </dependencies>
 </project>
